support styled components

--- a/static/about.html
+++ b/static/about.html
@@ -1,1 +1,1 @@
-<html><head><title>Nextpp Page</title></head><body><div id="root"><h3>About</h3></div></body></html>
+<html><head><title>Nextpp Page</title><style data-styled="" data-styled-version="4.4.1"></style></head><body><div id="root"><h3>About</h3></div></body></html>
