--- a/static/app.html
+++ b/static/app.html
@@ -1,1 +1,1 @@
-<html><head><title>Nextpp Page</title></head><body><div id="root"><div><h1>Hello Next++</h1><h2>This is superawesome project!!!</h2></div></div></body></html>
+<html><head><title>Nextpp Page</title><style data-styled="" data-styled-version="4.4.1"></style></head><body><div id="root"><div><h1>Hello Next++</h1><h2>This is superawesome project!!!</h2></div></div></body></html>
